@@ -16,41 +16,50 @@ import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 
 public class CancelPlayers implements Listener {
-	private final HashMap<@NotNull Player,@NotNull Pair<@NotNull List<@NotNull Boolean>,@NotNull List<@NotNull Boolean>>> players = new HashMap<>();
+	private final HashMap<@NotNull Player,@NotNull Trio<@NotNull List<@NotNull Boolean>,@NotNull List<@NotNull Boolean>,@NotNull List<@NotNull Boolean>>> players = new HashMap<>();
 	private MoveListener move = null;
 	
 	public CancelPlayers() {
 		register(POPUtilsMain.getInstance());
 	}
 	
-	public void addPlayer(@NotNull Player player, boolean allowRotation, boolean disableDamage) {
+	public void addPlayer(@NotNull Player player, boolean allowRotation, boolean disableDamage, boolean disableInventoryClicks) {
 		if (Utils.isPlayerNPC(player)) return;
 		int count = 1;
-		Pair<List<Boolean>,List<Boolean>> info = players.get(player);
-		if (info == null) players.put(player,Pair.of(new ArrayList<>(Arrays.asList(allowRotation)), new ArrayList<>(Arrays.asList(disableDamage))));
+		Trio<List<Boolean>,List<Boolean>,List<Boolean>> info = players.get(player);
+		if (info == null) players.put(player,Trio.of(new ArrayList<>(List.of(allowRotation)), new ArrayList<>(List.of(disableDamage)), new ArrayList<>(List.of(disableInventoryClicks))));
 		else {
-			info.first().add(allowRotation);
-			info.second().add(disableDamage);
+			info.first.add(allowRotation);
+			info.second.add(disableDamage);
+			info.third.add(disableInventoryClicks);
 		}
 		check();
+	}
+	
+	public void addPlayer(@NotNull Player player, boolean allowRotation, boolean disableDamage) {
+		addPlayer(player,false,false,true);
 	}
 	
 	public void addPlayer(@NotNull Player player) {
 		addPlayer(player,false,false);
 	}
 	
-	public void removePlayer(@NotNull Player player, boolean allowRotation, boolean disableDamage) {
-		Pair<List<Boolean>,List<Boolean>> info = players.get(player);
-		if (info == null || !info.first.contains(allowRotation) || !info.second.contains(disableDamage)) return;
+	public void removePlayer(@NotNull Player player, boolean allowRotation, boolean disableDamage, boolean disableInventoryClicks) {
+		Trio<List<Boolean>,List<Boolean>,List<Boolean>> info = players.get(player);
+		if (info == null || !info.first.contains(allowRotation) || !info.second.contains(disableDamage) || !info.third.contains(disableInventoryClicks)) return;
 		info.first.remove(allowRotation);
 		info.second.remove(disableDamage);
+		info.third.remove(disableInventoryClicks);
 		if (info.first.isEmpty()) players.remove(player);
 		check();
+	}
+	
+	public void removePlayer(@NotNull Player player, boolean allowRotation, boolean disableDamage) {
+		removePlayer(player,false,false,true);
 	}
 	
 	public void removePlayer(@NotNull Player player) {
@@ -58,14 +67,14 @@ public class CancelPlayers implements Listener {
 	}
 	
 	/**
-	 * @return First - allow rotation, Second - disable damage, Third - counter
+	 * @return First: counter, Second: First - allow rotation, Second - disable damage, Third - disable inventory clicks
 	 */
 	@Nullable
-	public Trio<@NotNull Boolean,@NotNull Boolean,@NotNull Integer> getPlayer(@NotNull Player player) {
+	public Pair<@NotNull Integer,@NotNull Trio<@NotNull Boolean,@NotNull Boolean,@NotNull Boolean>> getPlayer(@NotNull Player player) {
 		if (Utils.isPlayerNPC(player)) return null;
-		Pair<List<Boolean>,List<Boolean>> info = players.get(player);
+		Trio<List<Boolean>,List<Boolean>,List<Boolean>> info = players.get(player);
 		if (info == null) return null;
-		return Trio.of(!info.first.contains(false),info.second.contains(true),info.first.size());
+		return Pair.of(info.first.size(),Trio.of(!info.first.contains(false),info.second.contains(true),info.third.contains(true)));
 	}
 	
 	public boolean isPlayerCancelled(@NotNull Player player) {
@@ -114,7 +123,7 @@ public class CancelPlayers implements Listener {
 	@EventHandler(ignoreCancelled = true, priority = EventPriority.LOWEST)
 	public void onClick(InventoryClickEvent event) {
 		try {
-			if (players.containsKey((Player) event.getWhoClicked())) event.setCancelled(true);
+			if (disableInventoryClicks((Player) event.getWhoClicked())) event.setCancelled(true);
 		} catch (Exception e) {}
 	}
 	
@@ -129,8 +138,8 @@ public class CancelPlayers implements Listener {
 	}
 	
 	private boolean allowRotation(@NotNull Player player) {
-		Trio<Boolean,Boolean,Integer> info = getPlayer(player);
-		return info != null && info.first;
+		Pair<Integer,Trio<Boolean,Boolean,Boolean>> info = getPlayer(player);
+		return info != null && info.second.first;
 	}
 	
 	private boolean allowRotation(Entity entity) {
@@ -138,12 +147,21 @@ public class CancelPlayers implements Listener {
 	}
 	
 	private boolean disableDamage(@NotNull Player player) {
-		Trio<Boolean,Boolean,Integer> info = getPlayer(player);
-		return info != null && info.second;
+		Pair<Integer,Trio<Boolean,Boolean,Boolean>> info = getPlayer(player);
+		return info != null && info.second.second;
 	}
 	
 	private boolean disableDamage(Entity entity) {
 		return (entity instanceof Player player) && disableDamage(player);
+	}
+	
+	private boolean disableInventoryClicks(@NotNull Player player) {
+		Pair<Integer,Trio<Boolean,Boolean,Boolean>> info = getPlayer(player);
+		return info != null && info.second.third;
+	}
+	
+	private boolean disableInventoryClicks(Entity entity) {
+		return (entity instanceof Player player) && disableInventoryClicks(player);
 	}
 	
 	@EventHandler(ignoreCancelled = true, priority = EventPriority.LOWEST)
